# terraform-plan-parser

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TODO.md  main.tf  outputs.tf  suggestions.json  terraform.tfstate  todo.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  maintenance.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  ISSUE_LABELS.md  MAINTAINER_WORKFLOW.md  ROADMAP.md  WIKI_ALIGNMENT.md  architecture.md  suggestions.json
examples/: terraform-plan-parser.toml
homebrew/: terraform-plan-parser.rb
scoop/: terraform-plan-parser.json
src/: LICENSE  README.md  cli.rs  main.rs  parser.rs  renderer.rs  requirements.txt  terraform.rs
tests/: cli.rs  compare_action_columns.rs  completions.rs  fail_on.rs  github_summary.rs  replacement_actions.rs
tests/fixtures/: plan-new.ndjson  plan-old.ndjson  plan.ndjson
