[package]
name = "terraform_plan_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.1"
glob = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
toml = "0.8"
